feature: inserção de schemas para as rotas

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --files --ignore-watch node_modules src/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "test": "NODE_ENV=test jest"
@@ -30,6 +30,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.9",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
