--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "repository": "git@github.com:letlm/teste-tecnico-back-end.git",
   "author": "Letícia Leal Moreira <lealmleticia@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --files --ignore-watch node_modules src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "test": "NODE_ENV=test jest",
+    "build": "tsc",
+    "start": "node dist/app.js"
+  },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
-  },
-  "scripts": {
-    "dev": "ts-node-dev --files --ignore-watch node_modules src/server.ts",
-    "build": "tsc",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "test": "NODE_ENV=test jest",
-    "start": "node dist/src/server.js"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
