--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://user:password@host:port/database"
+DATABASE_URL="postgres://user:password@localhost:5432/db"
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DB=""
